# 3IABD_PA

./: app.py  requirements.txt
App/: app.py  index.html
App/Paris1/: submit.html
App/static/: paris.html
Data Lake/: arc_de_triomphe.py  data_augmentation.py  divise_test_entrainement.py  eiffel_tower.py  link.txt  main_data_lake.py  quality_img.py  recuperation_good_img.py  scrape_IG.py  scrape_pinterest.py
DataLake/: data_augmentation.py  dif.py  double.py  double2.py  download_pictures_link.py  link_arc_de_triomphe.txt  link_eiffel_tower.txt  link_insta.txt  louvre.py  main_data_lake.py  pantheon.py  quality_img.py  scrape_IG.py  scrape_pinterest.py  subfolders.py  tri_img.py
Framework/: framework.py  machinelearning.h  main.cpp
Framework/LinearModel/: CMakeLists.txt  linearModel.cpp  linear_model.py
Framework/MultiLayerPerceptron/: CMakeLists.txt  multiLayerPerceptron.cpp  multi_layer_perceptron.py
Framework/RadialBasisFunction/: CMakeLists.txt  radialBasisFunction.cpp  radial_basis_function.py  rbfKMeans.cpp  rbf_k_means.py
Framework/SupportVectorMachine/: supportVectorMachine.cpp
Framework/Utils/: check_functions.py  genetic_algorithm.py  image_opener.py  link_to_dll.py  set_var.py
Test Erwan/: LinearClassificationLib.cpp  MLPLib.cpp  check_case.py  linear_exe.py  mlp_exe.py
TestCPP/: LinearClassificationLib.cpp  MLP.cpp  main.cpp  mlp_exe.py
TestZone/Test Erwan/: main.py  (+5 more)
TestZone/Test Erwan/LinearLib/: CMakeLists.txt  LinearClassificationLib.cpp
WebApp/: CMakeLists.txt  api.py  assert_img.py  testing.cpp  testing.d
static/: index.html
(+223 files in other folders)
